Bug 325344 - After switching from Details to Icons View, filtered children of expanded folders may reappear
Summary: After switching from Details to Icons View, filtered children of expanded fol...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 4.11.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-26 21:04 UTC by Frank Reininghaus
Modified: 2013-10-17 15:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2013-09-26 21:04:39 UTC
Reproducible: Always

Steps to Reproduce:
1. Open a folder in Details View.
2. Expand a folder which is not empty.
3. Press Ctrl+I and enter a filter string that makes the children of the expanded folder disappear.
4. Switch to Icons View.
5. Clear the filter bar.
Actual Results:  
The children of the folder re-appear.

Expected Results:  
They should not reappear, because the folder cannot be expanded in Icons View.

I'll submit a patch to ReviewBoard in a minute.
Comment 1 Emmanuel Pescosta 2013-09-29 11:39:20 UTC
I can confirm this bug.
Comment 2 Frank Reininghaus 2013-09-29 13:48:59 UTC
Git commit befa646f8f9f935cecfffe5ff5171cb9b5cd1364 by Frank Reininghaus.
Committed on 29/09/2013 at 13:45.
Pushed by freininghaus into branch 'KDE/4.11'.

Make sure that removeExpandedItems() also removes filtered items

This fixes the problem that filtered child items in Details View may
reappear when switching the view mode and the clearing the filter.
REVIEW: 112962
FIXED-IN: 4.11.3

M  +13   -0    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +46   -0    dolphin/src/tests/kfileitemmodeltest.cpp

http://commits.kde.org/kde-baseapps/befa646f8f9f935cecfffe5ff5171cb9b5cd1364
Comment 3 Christoph Feck 2013-10-12 19:01:28 UTC
You know that an application is rock stable, if maintainers start filing their own bug reports to not starve ;)

Thanks for all your work!
Comment 4 Frank Reininghaus 2013-10-17 15:30:43 UTC
Thanks for your kind words, Christoph!

And thanks for all your work too! Without your tireless efforts, bugs.kde.org would really be a much less pleasant place.

(The same applies to Jekyll Wu, of course.)